bk_ida/gccida/g0/record_value_for_reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/combine.c:11628:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+2Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/combine.c:11673:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)rega + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/combine.c:11674:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)rega + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/combine.c:11736:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT && mode_bitsize[mode] <= 0x40u ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/combine.c:11740:38: error: use of undeclared identifier 'machine_mode'
v11 = num_sign_bit_copies( valuea, ( machine_mode)*( ( unsigned __int8 *)rega + 2)); 
                                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_value_for_reg/src/obj/combine.o] Error 1
